* fix the mobile wrapping divs not to render if content is empty

--- a/client/my-sites/domains/domain-management/edit/style.scss
+++ b/client/my-sites/domains/domain-management/edit/style.scss
@@ -155,8 +155,13 @@
 			.domain-types__break {
 				flex-basis: 100%;
 				height: 0;
-				border-top: 1px solid var( --color-neutral-5 );
 				margin: 0;
+			}
+			> div.domain-types__wrap-me {
+				border-top: 1px solid var( --color-neutral-5 );
+				flex-basis: 100%;
+				margin: 0;
+				padding: 16px 24px;
 			}
 		}
 	}
